docs : add comments to rules.html

--- a/pages/rules/rules.html
+++ b/pages/rules/rules.html
@@ -33,6 +33,7 @@
     </nav>
     <!-- MAIN CONTENT  -->
     <main class="center-container">
+      <!-- RULES CONTAINER STYLE -->
       <div class="rules-container">
         <h2 class="rules-title">
           📜Rules
